stonebank/00-stonebank-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stonebank
  labels:
    name: stonebank
