stonebank/03-stonebank-application-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stonebank-application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stonebank-application
  template:
    metadata:
      labels:
        app: stonebank-application
    spec:
      containers:
        - name: stonebank-application
          image: ronistone/stonebank-application:0.0.13
          imagePullPolicy: "Always"
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 15
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            failureThreshold: 5
            periodSeconds: 20
