stonebank/04-stonebank-processor-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stonebank-processor
  namespace: stonebank
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stonebank-processor
  template:
    metadata:
      labels:
        app: stonebank-processor
    spec:
      containers:
        - name: stonebank-processor
          image: ronistone/stonebank-processor:0.0.13
          imagePullPolicy: "Always"
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 15
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            failureThreshold: 5
            periodSeconds: 20
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "100m"
