stonebank/01-stonebank-application-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stonebank-application
  labels:
    app: stonebank-application
spec:
  type: ClusterIP
  ports:
    - name: web
      port: 8080
  selector:
    app: stonebank-application
