stonebank/02-stonebank-processor-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stonebank-processor
  namespace: stonebank
  labels:
    app: stonebank-processor
spec:
  type: ClusterIP
  ports:
    - name: web
      port: 8080
  selector:
    app: stonebank-processor
