stonebank/01-stonebank-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cluster-ingress
  namespace: stonebank
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: stonebank.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stonebank-application
                port:
                  number: 8080
